--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "body-parser": "^1.17.0",
     "express": "^4.15.0",
     "jsonfile": "^2.4.0",
-    "vue": "^2.2.1"
+    "vue": "^2.2.1",
+    "vue-router": "^2.3.0",
+    "vuex": "^2.2.1"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
     "babel-loader": "^6.0.0",
     "babel-preset-latest": "^6.0.0",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "cross-env": "^3.0.0",
     "concurrently": "^3.3.0",
     "css-loader": "^0.25.0",
