--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
-    "server": "node server.js",
-    "start": "concurrently --kill-others \"npm run server\" \"npm run dev\""
+    "start": "node server.js",
+    "server": "concurrently --kill-others \"npm run start\" \"npm run dev\""
   },
   "dependencies": {
     "body-parser": "^1.17.0",
