--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.17.0",
     "express": "^4.15.0",
     "jsonfile": "^2.4.0",
+    "normalize.css": "^5.0.0",
     "vue": "^2.2.1",
     "vue-router": "^2.3.0",
     "vuex": "^2.2.1"
@@ -21,12 +22,14 @@
   "devDependencies": {
     "babel-core": "^6.0.0",
     "babel-loader": "^6.0.0",
-    "babel-preset-latest": "^6.0.0",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
-    "cross-env": "^3.0.0",
+    "babel-preset-latest": "^6.0.0",
     "concurrently": "^3.3.0",
+    "cross-env": "^3.0.0",
     "css-loader": "^0.25.0",
     "file-loader": "^0.9.0",
+    "node-sass": "^4.5.0",
+    "sass-loader": "^6.0.2",
     "vue-loader": "^11.0.0",
     "vue-template-compiler": "^2.2.1",
     "webpack": "^2.2.0",
