--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "body-parser": "^1.17.0",
     "express": "^4.15.0",
     "jsonfile": "^2.4.0",
+    "mz": "^2.6.0",
     "normalize.css": "^5.0.0",
     "vue": "^2.2.1",
+    "vue-resource": "^1.2.1",
     "vue-router": "^2.3.0",
     "vuex": "^2.2.1"
   },
