--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mz": "^2.6.0",
     "normalize.css": "^5.0.0",
     "vue": "^2.2.1",
+    "vue-lazyload": "^1.0.0-rc12",
     "vue-resource": "^1.2.1",
     "vue-router": "^2.3.0",
     "vuex": "^2.2.1"
@@ -32,6 +33,7 @@
     "file-loader": "^0.9.0",
     "node-sass": "^4.5.0",
     "sass-loader": "^6.0.2",
+    "vue-lazyload": "^1.0.0-rc12",
     "vue-loader": "^11.0.0",
     "vue-template-compiler": "^2.2.1",
     "webpack": "^2.2.0",
